--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -12,7 +11,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Esigned</title>
+  <title>Martín Díaz</title>
 
   <!-- slider stylesheet -->
   <!-- slider stylesheet -->
@@ -37,7 +36,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
           <a class="navbar-brand" href="index.html">
             <span>
-              Esigned
+              Página de Martín
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,19 +47,19 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="Ejercicio_2.14.html">Ejercicio 2.14<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About </a>
+                  <a class="nav-link" href="Actividad_2.15.html">Ejercicio 2.15</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="do.html"> What we do </a>
+                  <a class="nav-link" href="Formulario_crearCuenta1.html"> Actividad 2.16 </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="portfolio.html"> Portfolio </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact us</a>
+                  <a class="nav-link" href="https://fluza.x10.mx">Ejercicio 2.18</a>
                 </li>
               </ul>
               <div class="user_option">
@@ -93,11 +92,11 @@
                   <div class="detail-box">
                     <div>
                       <h2>
-                        welcome to
+                        Bienvenido a
 
                       </h2>
                       <h1>
-                        web agency
+                        la página de Martín
                       </h1>
                       <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -119,19 +118,19 @@
                   <div class="detail-box">
                     <div>
                       <h2>
-                        welcome to
+                        Enlace a
 
                       </h2>
                       <h1>
-                        web agency
+                        Más proyectos
                       </h1>
                       <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
                       </p>
-                      <div class="">
-                        <a href="">
-                          Contact us
+                      <div class="link">
+                        <a href="https://fluza.x10.mx">
+                          Aquí
                         </a>
                       </div>
                     </div>
@@ -145,11 +144,11 @@
                   <div class="detail-box">
                     <div>
                       <h2>
-                        welcome to
+                        Más sobre
 
                       </h2>
                       <h1>
-                        web agency
+                        Mí
                       </h1>
                       <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -245,36 +244,11 @@
 
   <!-- who section -->
 
-  <section class="who_section ">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-5">
-          <div class="img-box">
-            <img src="images/who-img.jpg" alt="">
-          </div>
-        </div>
-        <div class="col-md-7">
-          <div class="detail-box">
-            <div class="heading_container">
-              <h2>
-                WHO WE ARE?
-              </h2>
-            </div>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrudLorem ipsum dolor sit amet, consectetur
-              adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud
-            </p>
-            <div>
-              <a href="">
-                Read More
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  <section class="who_section " style="text-align: center;">
+    <h2>
+    Mi horario
+    </h2>
+    <embed style="text-align=center;" src="Ejercicio_Tabla.html" type="text/html" height="450" width="550">
   </section>
 
   <!-- end who section -->
