--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                   <a class="nav-link" href="Actividad_2.15.html">Ejercicio 2.15</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Formulario_crearCuenta1.html"> Actividad 2.16 </a>
+                  <a class="nav-link" href="Formulario_crearCuenta1.html">Ejercicio 2.16</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="portfolio.html"> Portfolio </a>
+                  <a class="nav-link" href="Actividad_2.17.html">Ejercicio 2.17</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://fluza.x10.mx">Ejercicio 2.18</a>
+                  <a class="nav-link" href="actividad2.18.xhtml">Ejercicio 2.18</a>
                 </li>
               </ul>
               <div class="user_option">
