--- a/actividad2.18.xhtml
+++ b/actividad2.18.xhtml
@@ -8,11 +8,16 @@
     <h1>Documento XHTML con películas</h1>
         <img src="images/Figura-1-Mosaico-de-la-cartelera-cinematografica-de-las-peliculas-del-estudioFuente.png" alt="pelis" usemap="#workmap"/>
         <map name="workmap">
-            <area shape="rect" coords="0,0,170,265" alt="Panic in the Streets" href="#panic"/>
-            <area shape="rect" coords="170,0,340,265" alt="El año de la peste" href="#ano-de-la-peste"/>
-            <area shape="rect" coords="340,0,510,265" alt="La Peste" href="#la-peste"/>
-            <area shape="rect" coords="510,0,680,265" alt="Outbreak" href="#outbreak"/>
-            <area shape="rect" coords="680,0,850,265" alt="28 Days Later" href="#28-days-later"/>
+            <area shape="rect" coords="0,0,176,283" alt="Panic in the Streets" href="https://en.wikipedia.org/wiki/Panic_in_the_Streets_(film)"/>
+            <area shape="rect" coords="176,0,352,283" alt="El Año de la Peste" href="https://en.wikipedia.org/wiki/El_a%C3%B1o_de_la_peste"/>
+            <area shape="rect" coords="352,0,528,283" alt="La Peste" href="https://en.wikipedia.org/wiki/La_Peste_(1992_film)"/>
+            <area shape="rect" coords="528,0,704,283" alt="Outbreak" href="https://en.wikipedia.org/wiki/Outbreak_(film)"/>
+            <area shape="rect" coords="704,0,880,283" alt="28 Days Later" href="https://en.wikipedia.org/wiki/28_Days_Later"/>
+            <area shape="rect" coords="0,283,176,566" alt="Fatal Contact: Bird Flu in America" href="https://en.wikipedia.org/wiki/Fatal_Contact:_Bird_Flu_in_America"/>
+            <area shape="rect" coords="176,283,352,566" alt="Pandemic" href="https://en.wikipedia.org/wiki/Pandemic_(TV_miniseries)"/>
+            <area shape="rect" coords="352,283,528,566" alt="Contagion" href="https://en.wikipedia.org/wiki/Contagion_(2011_film)"/>
+            <area shape="rect" coords="528,283,704,566" alt="Flu" href="https://en.wikipedia.org/wiki/Flu_(film)"/>
+            <area shape="rect" coords="704,283,880,566" alt="93 Days" href="https://en.wikipedia.org/wiki/93_Days"/>
         </map>
 </body>
 </html>
