--- a/actividad2.18.xhtml
+++ b/actividad2.18.xhtml
@@ -10,7 +10,7 @@
         <map name="workmap">
             <area shape="rect" coords="0,0,176,283" alt="Panic in the Streets" href="https://en.wikipedia.org/wiki/Panic_in_the_Streets_(film)"/>
             <area shape="rect" coords="176,0,352,283" alt="El Año de la Peste" href="https://en.wikipedia.org/wiki/El_a%C3%B1o_de_la_peste"/>
-            <area shape="rect" coords="352,0,528,283" alt="La Peste" href="https://en.wikipedia.org/wiki/La_Peste_(1992_film)"/>
+            <area shape="rect" coords="352,0,528,283" alt="La Peste" href="https://en.wikipedia.org/wiki/The_Plague_(1992_film)"/>
             <area shape="rect" coords="528,0,704,283" alt="Outbreak" href="https://en.wikipedia.org/wiki/Outbreak_(film)"/>
             <area shape="rect" coords="704,0,880,283" alt="28 Days Later" href="https://en.wikipedia.org/wiki/28_Days_Later"/>
             <area shape="rect" coords="0,283,176,566" alt="Fatal Contact: Bird Flu in America" href="https://en.wikipedia.org/wiki/Fatal_Contact:_Bird_Flu_in_America"/>
