--- a/Actividad_2.15.html
+++ b/Actividad_2.15.html
@@ -10,6 +10,10 @@
         <h1 style="color: white;">Tabla de comparación</h1>
     </header>
     <main>
+        <img src="images/pequeno-icono-casa-negra-simbolo-inmobiliario-arquitectonico_572038-213.avif" width="20" height="20" usemap="#map">
+        <map name="#map">
+            <area shape="rect" coords="0,0,20,20" alt="Home" href="index.html"/> 
+        </map>
         <section>
             <table border="1">
                 <colgroup>
