--- a/Actividad_2.17.html
+++ b/Actividad_2.17.html
@@ -6,6 +6,10 @@
     <title>Actividad_2.16</title>
 </head>
 <body>
+    <img src="images/pequeno-icono-casa-negra-simbolo-inmobiliario-arquitectonico_572038-213.avif" width="20" height="20" usemap="#map">
+        <map name="#map">
+            <area shape="rect" coords="0,0,20,20" alt="Home" href="index.html"/> 
+        </map>
     <caption><h2 style="text-align: center;">Actvidad 2.16. Ejemplo de inclusión de vídeo con iframe/local y local con subtitulos</h2></caption>
     <table>
         <tr style="text-align: center;">
