--- a/Ejercicio_2.14.html
+++ b/Ejercicio_2.14.html
@@ -6,6 +6,10 @@
     <title>Ejercicio 2.14</title>
 </head>
 <body style="background-color: aqua; font-family: Calibri;">
+    <img src="images/pequeno-icono-casa-negra-simbolo-inmobiliario-arquitectonico_572038-213.avif" width="20" height="20" usemap="#map">
+        <map name="#map">
+            <area shape="rect" coords="0,0,20,20" alt="Home" href="index.html"/> 
+        </map>
     <header>
         <h1>Etiqueta embed para vídeos y fotos</h1>
     </header>
