--- a/formacceso.html
+++ b/formacceso.html
@@ -6,6 +6,10 @@
     <title>Acceso</title>
 </head>
 <body style="text-align: center;">
+    <img src="images/pequeno-icono-casa-negra-simbolo-inmobiliario-arquitectonico_572038-213.avif" width="20" height="20" usemap="#map">
+        <map name="#map">
+            <area shape="rect" coords="0,0,20,20" alt="Home" href="index.html"/> 
+        </map>
     <header>
         <h1>Accede a tu cuenta</h1>
     </header>
