--- a/actividad2.18.xhtml
+++ b/actividad2.18.xhtml
@@ -5,6 +5,10 @@
     <title>Actividad 2.18</title>
 </head>
 <body>
+    <img src="images/pequeno-icono-casa-negra-simbolo-inmobiliario-arquitectonico_572038-213.avif" width="20" height="20" usemap="#map"/>
+        <map name="#map">
+            <area shape="rect" coords="0,0,20,20" alt="Home" href="index.html"/> 
+        </map>
     <h1>Documento XHTML con películas</h1>
         <img src="images/Figura-1-Mosaico-de-la-cartelera-cinematografica-de-las-peliculas-del-estudioFuente.png" alt="pelis" usemap="#workmap"/>
         <map name="workmap">
