--- a/formalta.html
+++ b/formalta.html
@@ -6,6 +6,10 @@
     <title>Darte de alta</title>
 </head>
 <body>
+    <img src="images/pequeno-icono-casa-negra-simbolo-inmobiliario-arquitectonico_572038-213.avif" width="20" height="20" usemap="#map">
+        <map name="#map">
+            <area shape="rect" coords="0,0,20,20" alt="Home" href="index.html"> 
+        </map>
     <header style="text-align: center;">
         <h1>Completa los siguientes campos para realizar el alta en martindiazbastida.x10.mx</h1>
     </header>
