--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
   <!-- slider stylesheet -->
   <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -39,7 +40,8 @@
               Página de Martín
             </span>
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -47,7 +49,8 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="Ejercicio_2.14.html">Ejercicio 2.14<span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="Ejercicio_2.14.html">Ejercicio 2.14<span
+                      class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="Actividad_2.15.html">Ejercicio 2.15</a>
@@ -178,65 +181,62 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          What we do
+          EJERCICIOS CON CSS
         </h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna
+          Serie de ejercicios desde el 2.21 hasta el 2.24
         </p>
       </div>
-      <div class="do_container">
-        <div class="box arrow-start arrow_bg">
-          <div class="img-box">
-            <img src="images/d-1.png" alt="">
+      <a href="Actividad2.21.html">
+        <div class="do_container">
+          <div class="box arrow-start arrow_bg">
+            <div class="img-box">
+              <p style="color: white; margin-top: 20px;">Gradientes</p>
+            </div>
+            <div class="detail-box">
+              <h6 style="color: black;">
+                Ejercicio 2.21
+              </h6>
+            </div>
           </div>
-          <div class="detail-box">
-            <h6>
-              Marketing
-            </h6>
-          </div>
-        </div>
+      </a>
+      <a href="Actividad2.22.html">
         <div class="box arrow-middle arrow_bg">
           <div class="img-box">
-            <img src="images/d-2.png" alt="">
+            <p style="color: white; margin-top: 20px;">MP3 VS IPOD</p>
           </div>
           <div class="detail-box">
-            <h6>
-              Development
+            <h6 style="color: black;">
+              Ejercicio 2.22
             </h6>
           </div>
         </div>
+      </a>
+      <a href="Actividad2.23.html">
         <div class="box arrow-middle arrow_bg">
           <div class="img-box">
-            <img src="images/d-3.png" alt="">
+            <p style="color: white; margin-top: 20px;">Horario de clase</p>
           </div>
           <div class="detail-box">
-            <h6>
-              Html5
+            <h6 style="color: black;">
+              Ejercicio 2.23
             </h6>
           </div>
         </div>
-        <div class="box arrow-end arrow_bg">
-          <div class="img-box">
-            <img src="images/d-4.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h6>
-              Css
-            </h6>
-          </div>
+      </a>
+      <a href="Actividad2.24.html">
+      <div class="box arrow-end arrow_bg">
+        <div class="img-box">
+          <p style="color: white; margin-top: 20px;">Position y demás</p>
         </div>
-        <div class="box ">
-          <div class="img-box">
-            <img src="images/d-5.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h6>
-              Wordpress
-            </h6>
-          </div>
+        <div class="detail-box">
+          <h6 style="color: black;">
+            Ejercicio 2.24
+          </h6>
         </div>
       </div>
+    </a>
+    </div>
     </div>
   </section>
 
@@ -246,7 +246,7 @@
 
   <section class="who_section " style="text-align: center;">
     <h2>
-    Mi horario
+      Mi horario
     </h2>
     <embed style="text-align=center;" src="Ejercicio_Tabla.html" type="text/html" height="450" width="550">
   </section>
