--- a/Actividad2.21.html
+++ b/Actividad2.21.html
@@ -7,6 +7,7 @@
     <title>Gradientes</title>
 </head>
 <body>
+    <a href="index.html"><img id="home" src="images/pequeno-icono-casa-negra-simbolo-inmobiliario-arquitectonico_572038-213.avif" width="20" height="20"></a>
     <label for="garid1">Gradiente cónico de cuatro colores</label>
     <div id="grad1"></div>
     <br>
