--- a/Actividad2.23.html
+++ b/Actividad2.23.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/Actividad2.23.css">
 </head>
 <body>
+    <a href="index.html"><img id="home" src="images/pequeno-icono-casa-negra-simbolo-inmobiliario-arquitectonico_572038-213.avif" width="20" height="20"></a>
     <table border="1px">
         <caption>HORARIO DE CLASE CURSO 2021-2022 de MARTIN-DIAZ</caption>
         <thead>
