--- a/Actividad2.24.html
+++ b/Actividad2.24.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/Actividad2.24.css">
 </head>
 <body>
+    <a href="index.html"><img id="home" src="images/pequeno-icono-casa-negra-simbolo-inmobiliario-arquitectonico_572038-213.avif" width="20" height="20"></a>
     <div id="divPrimario">
         <div id="izq">Texto lado derecho</div>
         <div id="der">Texto lado izquierdo</div>
