--- a/index.html
+++ b/index.html
@@ -169,12 +169,10 @@
             </div>
           </div>
         </div>
-
       </div>
     </section>
     <!-- end slider section -->
   </div>
-
   <!-- do section -->
 
   <section class="do_section layout_padding">
@@ -243,14 +241,14 @@
   <!-- end do section -->
 
   <!-- who section -->
-
+  <!--
   <section class="who_section " style="text-align: center;">
     <h2>
       Mi horario
     </h2>
-    <embed style="text-align=center;" src="Ejercicio_Tabla.html" type="text/html" height="450" width="550">
+    <embed style="text-align: center;" src="Ejercicio_Tabla.html" type="text/html" height="450" width="550">
   </section>
-
+  -->
   <!-- end who section -->
 
 
