--- a/index.html
+++ b/index.html
@@ -234,6 +234,16 @@
         </div>
       </div>
     </a>
+    <div class="box ">
+      <div class="img-box">
+        <img src="images/d-5.png" alt="">
+      </div>
+      <div class="detail-box">
+        <h6>
+          Wordpress
+        </h6>
+      </div>
+    </div>
     </div>
     </div>
   </section>
@@ -241,14 +251,8 @@
   <!-- end do section -->
 
   <!-- who section -->
-  <!--
-  <section class="who_section " style="text-align: center;">
-    <h2>
-      Mi horario
-    </h2>
-    <embed style="text-align: center;" src="Ejercicio_Tabla.html" type="text/html" height="450" width="550">
-  </section>
-  -->
+
+  
   <!-- end who section -->
 
 
