--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
             </div>
             <div class="detail-box">
               <h6 style="color: black;">
-                Ejercicio 2.21
+                Cambiar a ejercicio 2.20
               </h6>
             </div>
           </div>
       </a>
-      <a href="Actividad2.22.html">
+      <a href="Actividad2.21.html">
         <div class="box arrow-middle arrow_bg">
           <div class="img-box">
             <p style="color: white; margin-top: 20px;">MP3 VS IPOD</p>
