--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
             <div class="detail-box">
               <h6 style="color: black;">
-                Cambiar a ejercicio 2.20
+                Ejercicio 2.21
               </h6>
             </div>
           </div>
