--- a/Actividad2.24.html
+++ b/Actividad2.24.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <a href="index.html"><img id="home" src="images/pequeno-icono-casa-negra-simbolo-inmobiliario-arquitectonico_572038-213.avif" width="20" height="20"></a>
+    <br><br>
     <div id="divPrimario">
-        <div id="izq">Texto lado derecho</div>
-        <div id="der">Texto lado izquierdo</div>
+        <div id="der">Texto lado derecho</div>
+        <div id="izq">Texto lado izquierdo</div>
     </div>
-    <br>
     <div id="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil hic veritatis officiis architecto, natus quasi expedita eos molestiae qui similique nostrum fugiat dolore sequi dicta delectus. Sunt deleniti sapiente adipisci.</div>
-    <div id="foot"><footer>Pie del documento</footer></div>
+    <footer id="foot">Pie del documento</footer>
     
 </body>
 </html>
