--- a/Actividad2.24.html
+++ b/Actividad2.24.html
@@ -13,7 +13,7 @@
         <div id="der">Texto lado derecho</div>
         <div id="izq">Texto lado izquierdo</div>
     </div>
-    <div id="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil hic veritatis officiis architecto, natus quasi expedita eos molestiae qui similique nostrum fugiat dolore sequi dicta delectus. Sunt deleniti sapiente adipisci.</div>
+    <div id="parrafo"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil hic veritatis officiis architecto, natus quasi expedita eos molestiae qui similique nostrum fugiat dolore sequi dicta delectus. Sunt deleniti sapiente adipisci.</span></div>
     <footer id="foot">Pie del documento</footer>
     
 </body>
