--- a/index.html
+++ b/index.html
@@ -185,20 +185,32 @@
           Serie de ejercicios desde el 2.21 hasta el 2.24
         </p>
       </div>
-      <a href="Actividad2.21.html">
+      <a href="Actividad2.20.html">
         <div class="do_container">
           <div class="box arrow-start arrow_bg">
             <div class="img-box">
-              <p style="color: white; margin-top: 20px;">Gradientes</p>
+              <p style="color: white; margin-top: 20px;">H2 con fondos de  colores</p>
             </div>
             <div class="detail-box">
               <h6 style="color: black;">
-                Ejercicio 2.21
+                Ejercicio 2.20
               </h6>
             </div>
           </div>
       </a>
       <a href="Actividad2.21.html">
+        <div class="box arrow-middle arrow_bg">
+          <div class="img-box">
+            <p style="color: white; margin-top: 20px;">Gradientes</p>
+          </div>
+          <div class="detail-box">
+            <h6 style="color: black;">
+              Ejercicio 2.21
+            </h6>
+          </div>
+        </div>
+      </a>
+      <a href="Actividad2.22.html">
         <div class="box arrow-middle arrow_bg">
           <div class="img-box">
             <p style="color: white; margin-top: 20px;">MP3 VS IPOD</p>
@@ -211,7 +223,7 @@
         </div>
       </a>
       <a href="Actividad2.23.html">
-        <div class="box arrow-middle arrow_bg">
+        <div class="box arrow-end arrow_bg">
           <div class="img-box">
             <p style="color: white; margin-top: 20px;">Horario de clase</p>
           </div>
@@ -223,27 +235,17 @@
         </div>
       </a>
       <a href="Actividad2.24.html">
-      <div class="box arrow-end arrow_bg">
-        <div class="img-box">
-          <p style="color: white; margin-top: 20px;">Position y demás</p>
+        <div class="box ">
+          <div class="img-box">
+            <p style="color: white; margin-top: 20px;">Position y demás</p>
+          </div>
+          <div class="detail-box">
+            <h6 style="color: black;">
+              Ejercicio 2.24
+            </h6>
+          </div>
         </div>
-        <div class="detail-box">
-          <h6 style="color: black;">
-            Ejercicio 2.24
-          </h6>
-        </div>
-      </div>
-    </a>
-    <div class="box ">
-      <div class="img-box">
-        <img src="images/d-5.png" alt="">
-      </div>
-      <div class="detail-box">
-        <h6>
-          Wordpress
-        </h6>
-      </div>
-    </div>
+      </a>
     </div>
     </div>
   </section>
@@ -252,7 +254,7 @@
 
   <!-- who section -->
 
-  
+
   <!-- end who section -->
 
 
